--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <div id="heading"><p>piggyvest</p></div><br/>
+        <div id="heading"><a href=""><img src="piggyvest logo.png" alt="piggyvest logo" width="191px" height="55px"></a></div><br/>
         <div id="main-div">
             <header>
                 <p><h1>Create a Secure Account</h1></p>
@@ -49,7 +49,7 @@
             </form>
             
         </div>
-        <p>Already have an account? Log in</p>  
+        <div id="login"><p >Already have an account? Log in</p></div> 
         </div>
     </main>
 </body>
